--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ordersxmlreader">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Xml Reder
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Xml Reader
             </NavLink>
         </div>
     </nav>
