--- a/Shared/ShopsGrid.razor
+++ b/Shared/ShopsGrid.razor
@@ -23,6 +23,10 @@
 
 @code {
 
+    [Parameter]
+    public List<Shop> shops { get; set; }
+
+    // ----
 
     BlazorBootstrap.Grid<Employee1> grid;
     private IEnumerable<Employee1> employees;
