--- a/Pages/OrdersXmlReader.razor
+++ b/Pages/OrdersXmlReader.razor
@@ -7,7 +7,7 @@
 <h1>XML Reader</h1>
 
 <!-- Choose a XML file -->
-<button onclick="document.getElementById('flpicker').click()">Pick a XML file</button>
+<button class="btn btn-primary mb-3" onclick="document.getElementById('flpicker').click()">Pick a XML file</button>
 <InputFile id="flpicker" OnChange="@ReadFile" hidden />
 
 <!-- Display XML file's content (customers, shops, terminal) -->
