äll 3 grids are working now

--- a/Shared/CompaniesGrid.razor
+++ b/Shared/CompaniesGrid.razor
@@ -1,50 +1,30 @@
 ﻿@using OrdersReaderBlazorApp.Data;
 
 
-<Grid @ref="grid" TItem="Company" class="table table-hover table-bordered table-striped" DataProvider="CompaniesDataProvider" AllowFiltering="true" AllowPaging="true" PageSize="5" Responsive="true">
-    <GridColumn TItem="Company" HeaderText="companyAddressType" PropertyName="companyAddressType">
-        @context.companyAddressType
+<Grid @ref="grid" TItem="Company" class="table table-hover table-bordered table-striped" DataProvider="CompaniesDataProvider" AllowFiltering="true" AllowPaging="true" PageSize="10" Responsive="true">
+    <GridColumn TItem="Company" HeaderText="Company ID" PropertyName="companyId">
+        @context.companyId
     </GridColumn>
-    <GridColumn TItem="Company" HeaderText="companyCity" PropertyName="companyCity">
-        @context.companyCity
+    <GridColumn TItem="Company" HeaderText="Company Name" PropertyName="companyName">
+        @context.companyName
     </GridColumn>
+    <GridColumn TItem="Company" HeaderText="Company Address" PropertyName="companyAddress">
+        @context.companyAddress
+    </GridColumn>
+    <GridColumn TItem="Company" HeaderText="Company Contact Person" PropertyName="companyContactPerson">
+        @context.companyContactPerson
+    </GridColumn>
+    <GridColumn TItem="Company" HeaderText="Company Status" PropertyName="companyStatus">
+        @context.companyStatus
+    </GridColumn>
+
 </Grid>
-
-<!--
-<table>
-    @foreach (var item in companies)
-    {
-        <tr>
-            <td>@item.companyAcqCode</td>
-            <td>@item.companyAddressType</td>
-            <td>@item.companyCity</td>
-            <td>@item.companyContactPerson</td>
-            <td>@item.companyContactPersonFunction</td>
-            <td>@item.companyCountry</td>
-            <td>@item.companyHouseNum</td>
-            <td>@item.companyId</td>
-            <td>@item.companyName</td>
-            <td>@item.companyNickname</td>
-            <td>@item.companyProvinceCode</td>
-            <td>@item.companyStatus</td>
-        </tr>
-    }
-</table>
--->
-
-<p>@foo</p>
-
 
 @code {
 
 
     [Parameter]
     public List<Company> companies { get; set; }
-
-    [Parameter]
-    public string foo { get; set; }
-
-    // ----
 
     BlazorBootstrap.Grid<Company> grid;
 
